<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgSecondary"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_insta_logo" />

    <EditText
        android:id="@+id/signup_fullname"
        style="@style/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="100dp"
        android:hint="@string/full_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_username"
        style="@style/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signup_fullname"
        android:layout_marginTop="10dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/signup_email"
        style="@style/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signup_username"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_password"
        style="@style/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signup_email"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@id/signup_password"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/sign_up"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorBlue"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>