<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountSettings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/eProfile_appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/eProfile_btnClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/eProfile_btnSave"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_done" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eProfile_appbar"
        android:layout_gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/eProfile_ivProfileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/eProfile_btnChangeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/change_image"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eProfile_etFullname"
            style="@style/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name" />

        <EditText
            android:id="@+id/eProfile_etUsername"
            style="@style/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/eProfile_etBio"
            style="@style/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bio" />
    </LinearLayout>

    <Button
        android:id="@+id/eProfile_btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/eProfile_btnDelete"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/log_out"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/eProfile_btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:text="@string/delete_account"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>