<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgSecondary"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:src="@drawable/ic_insta_logo" />

    <EditText
        android:id="@+id/login_email"
        style="@style/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="100dp"
        android:hint="@string/username_email_or_mobile_number"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        style="@style/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_email"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@id/login_password"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/login"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/forget_password"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup_link"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_above="@id/bottomMeta"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/create_account" />

    <LinearLayout
        android:id="@+id/bottomMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_meta" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meta"
            android:textColor="#212121"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>