<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_item_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:src="@drawable/profile">

    </de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout
        android:id="@+id/user_item_mid"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_item_search_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_item_search_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:padding="5dp"
            android:text="@string/fullname"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/user_item_follow"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_btn"
        android:padding="1dp"
        android:text="@string/follow"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>