<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar__profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/profile_toolbar_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/options_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_menu" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar__profile">

        <LinearLayout
            android:id="@+id/top_bar_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_bar_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/profile" />

                <LinearLayout
                    android:id="@+id/edit_profile_vertical"
                    android:layout_width="202dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/edit_profile_horizontal"
                        android:layout_width="202dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/total_posts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/title_posts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/posts"
                                android:textColor="@android:color/black"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/total_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/title_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textColor="@android:color/black"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/total_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/title_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@android:color/black"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/edit_profile_Button"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/round_btn"
                        android:text="@string/edit_profile"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/fullname_in_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/fullname"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username_in_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bio_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:padding="6dp"
                android:text="@string/bio"
                android:textColor="@android:color/black"
                android:textSize="11sp"
                android:textStyle="normal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_black_background"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnPostGrid"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_grid" />

                <ImageButton
                    android:id="@+id/images_save_btn"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="49dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_save_large" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_saved_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>